--- a/css/home.css
+++ b/css/home.css
@@ -28,7 +28,7 @@
 
 .about img {
   border-radius: 20px;
-  max-width: 350px;
+  max-width: 300px;
 }
 
 .about-text {
@@ -55,12 +55,13 @@
 .card {
   width: 280px;
   height: 360px;
+  font-size:20px;
   border-radius: 15px;
   padding: 1.5rem;
   background: white;
   position: relative;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   transition: 0.4s ease-out;
   box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.5);
 }
@@ -113,14 +114,8 @@
   text-align: center;
 }
 
-.card .info h1 {
+.card .info h3 {
   margin: 0;
-}
-
-.card .info p {
-  margin-top: 8px;
-  font-size: 15px;
-  letter-spacing: 1px;
 }
 
 @media (max-width: 768px) {
@@ -133,5 +128,17 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+  }
+  .card {
+    transform: translateY(20px);
+  }
+
+  .card:before {
+    opacity: 1;
+  }
+
+  .card .info {
+    opacity: 1;
+    transform: translateY(0px);
   }
 }
