--- a/css/home.css
+++ b/css/home.css
@@ -9,11 +9,19 @@
   flex-direction: column;
   color: #fff;
   text-shadow: 1px 1px 2px #000;
+  position: relative;
 }
 
 .hero h1 {
   font-size: 2.5rem;
   margin-bottom: 1rem;
+}
+
+.slogan-container {
+ position: absolute;
+  width: 30%;
+  left: 20%;
+  top: 20%;
 }
 
 .about {
@@ -55,7 +63,7 @@
 .card {
   width: 280px;
   height: 360px;
-  font-size:20px;
+  font-size: 20px;
   border-radius: 15px;
   padding: 1.5rem;
   background: white;
@@ -65,7 +73,9 @@
   transition: 0.4s ease-out;
   box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.5);
 }
-
+.services a {
+  text-decoration: none;
+}
 .card:hover {
   transform: translateY(20px);
 }
@@ -129,6 +139,14 @@
     justify-content: center;
     text-align: center;
   }
+.slogan-container {
+ position: absolute;
+  width: 100%;
+  left: 0;
+  top: 0;
+  
+}
+
   .card {
     transform: translateY(20px);
   }
