--- a/views/contacto.html
+++ b/views/contacto.html
@@ -1,134 +1,125 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="keywords"
-      content="zadum, estetica, facial, belleza, cuidado personal"
-    />
-    <meta name="author" content="Majo & Arianna" />
-    <title>Contacto</title>
-    <!-- PRELOAD de CSS  -->
-    <link rel="preload" href="../css/normalize.css" as="style" />
-    <link rel="preload" href="../css/common.css" as="style" />
-    <link rel="preload" href="../css/contact.css" as="style" />
-    <!-- Carga real del CSS -->
-    <link rel="stylesheet" href="../css/normalize.css" />
-    <link rel="stylesheet" href="../css/common.css" />
-    <link rel="stylesheet" href="../css/contact.css" />
-    <!-- Preconnect mejora la carga de fuentes externas -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <!-- Google Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <!-- FontAwesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-    />
-  </head>
 
-  <body>
-    <!--Header-->
-    <header>
-      <a href="../index.html">
-        <img src="../img/LogoZadum.png" alt="Logo Zadum Header"
-      /></a>
-      <nav id="main-nav">
-        <a href="../index.html">Inicio</a>
-        <a href="./services.html">Servicios</a>
-        <a href="./contacto.html">Contacto</a>
-      </nav>
-      <button
-        class="menu-toggle"
-        id="menuToggle"
-        aria-controls="main-nav"
-        aria-expanded="false"
-        aria-label="Abrir menú"
-      >
-        <i class="fa-solid fa-bars" aria-hidden="true"></i>
-      </button>
-    </header>
-    <!--Cuerpo de la página-->
-    <main>
-      <section class="contact-section">
-        <h2>Contáctanos</h2>
-        <p>Estamos disponibles para responder tus dudas o agendar tu cita.</p>
-        <div class="contact-grid">
-          <div class="contact-card">
-            <i class="fas fa-phone"></i>
-            <h4>Teléfono</h4>
-            <p>+506 7158 1462</p>
-          </div>
-          <div class="contact-card">
-            <a href="https://wa.me/+50671581462" target="_blank"><i class="fab fa-whatsapp"></i></a>
-            <h4>WhatsApp</h4>
-            <p>+506 7158 1462</p>
-          </div>
-          <div class="contact-card">
-            <i class="fas fa-clock"></i>
-            <h4>Horario</h4>
-            <p>Lunes a Viernes<br />8:00 AM - 5:00 PM</p>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="keywords" content="zadum, estetica, facial, belleza, cuidado personal" />
+  <meta name="author" content="Majo & Arianna" />
+  <title>Contacto</title>
+  <!-- PRELOAD de CSS  -->
+  <link rel="preload" href="../css/normalize.css" as="style" />
+  <link rel="preload" href="../css/common.css" as="style" />
+  <link rel="preload" href="../css/contact.css" as="style" />
+  <!-- Carga real del CSS -->
+  <link rel="stylesheet" href="../css/normalize.css" />
+  <link rel="stylesheet" href="../css/common.css" />
+  <link rel="stylesheet" href="../css/contact.css" />
+  <!-- Preconnect mejora la carga de fuentes externas -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <!-- Google Fonts -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+    rel="stylesheet" />
+  <!-- FontAwesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+</head>
 
-          <div class="contact-card">
-            <i class="fas fa-map-marker-alt"></i>
-            <h4>Dirección</h4>
-            <p>San José, Moravia, Costa Rica</p>
-          </div>
-
-          <div class="contact-card">
-            <a href="https://www.instagram.com/zadum__oficial?igsh=dnh6Zm9vOGphc3Z3" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-            <h4>Instagram</h4>
-            <p>Zadum_oficial</p>
-            
-          </div>
-
-          <div class="contact-card">
-           <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a> 
-            <h4>Facebook</h4>
-            <p>Zadum Oficial</p>
-          </div>
+<body>
+  <!--Header-->
+  <header>
+    <a href="../index.html">
+      <img src="../img/LogoZadum.png" alt="Logo Zadum Header" /></a>
+    <nav id="main-nav">
+      <a href="../index.html">Inicio</a>
+      <a href="./services.html">Servicios</a>
+      <a href="./contacto.html">Contacto</a>
+    </nav>
+    <button class="menu-toggle" id="menuToggle" aria-controls="main-nav" aria-expanded="false" aria-label="Abrir menú">
+      <i class="fa-solid fa-bars" aria-hidden="true"></i>
+    </button>
+  </header>
+  <!--Cuerpo de la página-->
+  <main>
+    <section class="contact-section">
+      <h2>Contáctanos</h2>
+      <p>Estamos disponibles para responder tus dudas o agendar tu cita.</p>
+      <div class="contact-grid">
+        <div class="contact-card">
+          <i class="fas fa-phone"></i>
+          <h4>Teléfono</h4>
+          <p>+506 7158 1462</p>
         </div>
-        <div class="map-container">
-          <iframe
-            src="https://www.google.com/maps?q=San+José,+Costa+Rica&output=embed"
-            width="100%"
-            height="300"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-          ></iframe>
+        <div class="contact-card">
+          <a href="https://wa.me/+50671581462" target="_blank"><i class="fab fa-whatsapp"></i></a>
+          <h4>WhatsApp</h4>
+          <p>+506 7158 1462</p>
         </div>
-      </section>
-    </main>
+        <div class="contact-card">
+          <i class="fas fa-clock"></i>
+          <h4>Horario</h4>
+          <p>Lunes a Viernes<br />8:00 AM - 5:00 PM</p>
+        </div>
 
-    <!--Botón de WhatsApp flotante-->
-    <a class="flotante" href="https://wa.me/+50671581462">
-      <img class="boton-wsp" src="../img/WhatsAppLogo.png" border="0" />
-    </a>
+        <div class="contact-card">
+          <i class="fas fa-map-marker-alt"></i>
+          <h4>Dirección</h4>
+          <p>San José, Moravia, Costa Rica</p>
+        </div>
 
-    <!--Footer-->
-    <footer>
+        <div class="contact-card">
+          <a href="https://www.instagram.com/zadum__oficial?igsh=dnh6Zm9vOGphc3Z3" target="_blank"><i
+              class="fa-brands fa-instagram"></i></a>
+          <h4>Instagram</h4>
+          <p>Zadum_oficial</p>
+
+        </div>
+
+        <div class="contact-card">
+          <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+          <h4>Facebook</h4>
+          <p>Zadum Oficial</p>
+        </div>
+      </div>
+      
+      <div class="map-container">
+        <iframe src="https://maps.google.com/maps?q=costa+rica%2C+san+jose%2C+Moravia&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="300"
+          style="border: 0" allowfullscreen="" loading="lazy"></iframe>
+      </div>
+    </section>
+  </main>
+
+  <!--Botón de WhatsApp flotante-->
+  <a class="flotante" href="https://wa.me/+50671581462">
+    <img class="boton-wsp" src="../img/WhatsAppLogo.png" border="0" />
+  </a>
+
+  <!--Footer-->
+  <footer>
       <div class="footer-content">
         <div class="footer-logo">
           <img src="../img/LogoZadum.png" alt="Cuidado Facial" />
         </div>
-
         <div>
           <div class="footer-links">
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-x-twitter"></i>
+            <a
+              href="https://www.instagram.com/zadum__oficial?igsh=dnh6Zm9vOGphc3Z3"
+              target="_blank"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+            <a href="https://www.facebook.com" target="_blank"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
+            <a href="https://wa.me/+50671581462" target="_blank"
+              ><i class="fab fa-whatsapp"></i
+            ></a>
           </div>
           <p>© 2025 Zadum. Todos los derechos reservados.</p>
         </div>
       </div>
     </footer>
-    <script src="../js/index.js"></script>
-  </body>
+  <script src="../js/index.js"></script>
+</body>
+
 </html>
