--- a/views/services.html
+++ b/views/services.html
@@ -1,167 +1,276 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="zadum, estetica, facial, belleza, cuidado personal"
+    />
+    <meta name="author" content="Majo & Arianna" />
+    <title>Servicios</title>
+    <!-- PRELOAD de CSS  -->
+    <link rel="preload" href="../css/normalize.css" as="style" />
+    <link rel="preload" href="../css/common.css" as="style" />
+    <link rel="preload" href="../css/services.css" as="style" />
+    <!-- Carga real del CSS -->
+    <link rel="stylesheet" href="../css/normalize.css" />
+    <link rel="stylesheet" href="../css/common.css" />
+    <link rel="stylesheet" href="../css/services.css" />
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- FontAwesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="keywords" content="zadum, estetica, facial, belleza, cuidado personal" />
-  <meta name="author" content="Majo & Arianna" />
-  <title>Servicios</title>
-  <!-- PRELOAD de CSS  -->
-  <link rel="preload" href="../css/normalize.css" as="style" />
-  <link rel="preload" href="../css/common.css" as="style" />
-  <link rel="preload" href="../css/services.css" as="style" />
-  <!-- Carga real del CSS -->
-  <link rel="stylesheet" href="../css/normalize.css" />
-  <link rel="stylesheet" href="../css/common.css" />
-  <link rel="stylesheet" href="../css/services.css" />
-  <!-- Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-    rel="stylesheet" />
-  <!-- FontAwesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-</head>
+  <body>
+    <header>
+      <a href="../index.html">
+        <img src="../img/LogoZadum.png" alt="Logo Zadum Header"
+      /></a>
+      <nav id="main-nav">
+        <a href="../index.html">Inicio</a>
+        <a href="./services.html">Servicios</a>
+        <a href="./contacto.html">Contacto</a>
+      </nav>
+      <button
+        class="menu-toggle"
+        id="menuToggle"
+        aria-controls="main-nav"
+        aria-expanded="false"
+        aria-label="Abrir menú"
+      >
+        <i class="fa-solid fa-bars" aria-hidden="true"></i>
+      </button>
+    </header>
+    <section>
+      <h1>Nuestros Servicios</h1>
+      <p class="servicio-p">
+        Descubre una amplia gama de tratamientos diseñados para realzar tu
+        belleza y bienestar. Desde cuidado facial hasta tratamientos corporales,
+        nuestro equipo de expertos está aquí para ofrecerte una experiencia
+        personalizada y de alta calidad.
+      </p>
+      <div class="card-servicio">
+        <img
+          src="../img/Masajes Terapéuticos y Relajantes.png"
+          alt="Tratamiento corporal"
+          class="img-right"
+        />
 
-<body>
-  <header>
-    <a href="../index.html">
-      <img src="../img/LogoZadum.png" alt="Logo Zadum Header" /></a>
-    <nav id="main-nav">
-      <a href="../index.html">Inicio</a>
-      <a href="./services.html">Servicios</a>
-      <a href="./contacto.html">Contacto</a>
-    </nav>
-    <button class="menu-toggle" id="menuToggle" aria-controls="main-nav" aria-expanded="false" aria-label="Abrir menú">
-      <i class="fa-solid fa-bars" aria-hidden="true"></i>
-    </button>
-  </header>
-  <section>
-    <h1>Nuestros Servicios</h1>
-    <p class="servicio-p">
-      Descubre una amplia gama de tratamientos diseñados para realzar tu
-      belleza y bienestar. Desde cuidado facial hasta tratamientos corporales,
-      nuestro equipo de expertos está aquí para ofrecerte una experiencia
-      personalizada y de alta calidad.
-    </p>
-    <div class="card-servicio">
-      <img src="../img/Masajes Terapéuticos y Relajantes.png" alt="Tratamiento corporal" class="img-right" />
-      <div class="contenido">
-        <h2>Masajes Terapéuticos y Relajantes</h2>
-        <ul>
-          <li>
-            <span class="titulo">Masaje relajante</span>
-            <p class="descripcion">
-              Ideal para liberar el estrés y alcanzar una sensación de calma y
-              descanso.
-            </p>
-          </li>
-          <li>
-            <span class="titulo">Masaje descontracturante</span>
-            <p class="descripcion">
-              Trabaja en profundidad zonas con contracturas o rigidez muscular.
-            </p>
-          </li>
-          <li>
-            <span class="titulo">Masaje para piernas cansadas</span>
-            <p class="descripcion">
-              Alivia la pesadez, activa la circulación y devuelve ligereza a tus piernas.
-            </p>
-          </li>
-          <li>
-            <span class="titulo">Masaje para espalda cansada</span>
-            <p class="descripcion">
-              Especial para dolores posturales o fatiga acumulada.
-            </p>
-          </li>
-          <li>
-            <span class="titulo">Masaje con esferas chinas</span>
-            <p class="descripcion">
-              Estimula puntos energéticos para armonizar cuerpo y mente.
-            </p>
-          </li>
-          <li>
-            <span class="titulo">Masaje con pindas herbales</span>
-            <p class="descripcion">
-              Una fusión de masaje y aromaterapia con saquitos calientes de hierbas
-            </p>
-          </li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="card-servicio reverse">
-      <img src="../img/Tratamientos Corporales Especiales.jpg" alt="Tratamiento corporal" class="img-left" />
-      <div class="contenido contenido-left">
-        <h2>Tratamientos Corporales Especiales</h2>
-        <ul>
-          <li>Parafina en espalda relajante</li>
-          <li>Parafina en espalda descontracturante</li>
-          <li>Drenaje linfático manual</li>
-          <li>Envolturas corporales</li>
-          <li>Limpieza profunda en espalda (acné)</li>
-          <li>Limpieza profunda en glúteos (acné)</li>
-        </ul>
-      </div>
-    </div>
-    <div class="card-servicio">
-      <img src="../img/Tratamientos Faciales Rejuvenecedores.jpg" alt="Tratamiento corporal" class="img-right" />
-      <div class="contenido">
-        <h2>Tratamientos Faciales Rejuvenecedores</h2>
-
-        <ul>
-          <li>Limpieza facial profunda profesional</li>
-          <li>Alta frecuencia facial</li>
-          <li>Radiofrecuencia facial</li>
-          <li>Reafirmación de papada</li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="card-servicio reverse">
-      <img src="../img/cosmetologia-medico-y-paciente.jpg" alt="Tratamiento corporal" class="img-left" />
-      <div class="contenido contenido-left">
-        <h2>Beneficios de Nuestros Tratamientos</h2>
-
-        <h4>
-          Cada sesión está pensada para brindarte resultados visibles y
-          bienestar integral
-        </h4>
-        <ul>
-          <li>Relajación física y mental</li>
-          <li>Alivio de dolores musculares</li>
-          <li>Reafirmación y tonificación de la piel</li>
-          <li>Mejora de la circulación</li>
-          <li>Eliminación de toxinas</li>
-          <li>Control de acné e impurezas</li>
-          <li>Hidratación y nutrición profunda</li>
-          <li>Estética con bienestar</li>
-        </ul>
-      </div>
-    </div>
-  </section>
-  <!--Botón de WhatsApp flotante-->
-  <a class="flotante" href="https://wa.me/+50671581462">
-    <img class="boton-wsp" src="../img/WhatsAppLogo.png" border="0" />
-  </a>
-
-  <footer>
-    <div class="footer-content">
-      <div class="footer-logo">
-        <img src="../img/LogoZadum.png" alt="Cuidado Facial" />
-      </div>
-      <div>
-        <div class="footer-links">
-          <i class="fa-brands fa-instagram"></i>
-          <i class="fa-brands fa-facebook"></i>
-          <i class="fa-brands fa-x-twitter"></i>
+        <div class="contenido">
+          <h2>Masajes Terapéuticos y Relajantes</h2>
+          <ul>
+            <li>
+              <span class="titulo">Masaje relajante</span>
+              <p class="descripcion">
+                Ideal para liberar el estrés y alcanzar una sensación de calma y
+                descanso.
+              </p>
+            </li>
+            <li>
+              <span class="titulo">Masaje descontracturante</span>
+              <p class="descripcion">
+                Trabaja en profundidad zonas con contracturas o rigidez
+                muscular.
+              </p>
+            </li>
+            <li>
+              <span class="titulo">Masaje para piernas cansadas</span>
+              <p class="descripcion">
+                Alivia la pesadez, activa la circulación y devuelve ligereza a
+                tus piernas.
+              </p>
+            </li>
+            <li>
+              <span class="titulo">Masaje para espalda cansada</span>
+              <p class="descripcion">
+                Especial para dolores posturales o fatiga acumulada.
+              </p>
+            </li>
+            <li>
+              <span class="titulo">Masaje con esferas chinas</span>
+              <p class="descripcion">
+                Estimula puntos energéticos para armonizar cuerpo y mente.
+              </p>
+            </li>
+            <li>
+              <span class="titulo">Masaje con pindas herbales</span>
+              <p class="descripcion">
+                Una fusión de masaje y aromaterapia con saquitos calientes de
+                hierbas
+              </p>
+            </li>
+          </ul>
         </div>
-        <p>© 2025 Zadum. Todos los derechos reservados.</p>
       </div>
-    </div>
-  </footer>
-  <script src="../js/index.js"></script>
-  <script src="../js/viewService.js"></script>
-</body>
 
+      <div class="card-servicio reverse">
+        <img
+          src="../img/Tratamientos Corporales Especiales.jpg"
+          alt="Tratamiento corporal"
+          class="img-left"
+        />
+        <div class="contenido contenido-left">
+          <h2>Tratamientos Corporales Especiales</h2>
+          <ul>
+            <li>
+              <span class="titulo">Parafina en espalda relajante</span>
+              <p class="descripcion">
+                Ideal para aliviar tensiones musculares y nutrir profundamente
+                la piel
+              </p>
+            </li>
+
+            <li>
+              <span class="titulo">Parafina en espalda descontracturante</span>
+              <p class="descripcion">
+                Ideal para aliviar tensiones musculares y nutrir profundamente
+                la piel
+              </p>
+            </li>
+
+            <li>
+              <span class="titulo">Drenaje linfático manual</span>
+              <p class="descripcion">
+                Técnica suave que favorece la eliminación de toxinas, reduce la
+                retención de líquidos y mejora la circulación.
+              </p>
+            </li>
+
+            <li>
+              <span class="titulo">Envolturas corporales</span>
+              <p class="descripcion">
+                Tratamiento hidratante que nutre profundamente la piel con
+                ingredientes naturales como algas, arcilla, chocolate o aceites
+                esenciales
+              </p>
+            </li>
+
+            <li>
+              <span class="titulo">Limpieza profunda en espalda (acné)</span>
+              <p class="descripcion">
+                Exfoliación, extracción y purificación de la piel para controlar
+                imperfecciones.
+              </p>
+            </li>
+
+            <li>
+              <span class="titulo">Limpieza profunda en glúteos (acné)</span>
+              <p class="descripcion">
+                Ayuda a eliminar granitos, mejorar la textura y prevenir brotes.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="card-servicio">
+        <img
+          src="../img/Tratamientos Faciales Rejuvenecedores.jpg"
+          alt="Tratamiento corporal"
+          class="img-right"
+        />
+        <div class="contenido">
+          <h2>Tratamientos Faciales Rejuvenecedores</h2>
+
+          <ul>
+            <li>
+              <span class="titulo">Limpieza facial profunda profesional</span>
+              <p class="descripcion">
+                Ideal para renovar la piel, eliminar impurezas y mejorar su
+                textura
+              </p>
+            </li>
+
+            <li>
+              <span class="titulo">Alta frecuencia facial</span>
+              <p class="descripcion">
+                Tratamiento antibacteriano que favorece la cicatrización y
+                combate el acné.
+              </p>
+            </li>
+
+            <li>
+              <span class="titulo">Radiofrecuencia facial</span>
+              <p class="descripcion">
+                Estimula el colágeno para reducir arrugas y mejorar la firmeza
+                de la piel.
+              </p>
+            </li>
+
+            <li>
+              <span class="titulo">Reafirmación de papada</span>
+              <p class="descripcion">
+                Tratamiento localizado que tonifica y define el contorno del
+                rostro.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="card-servicio reverse">
+        <img
+          src="../img/cosmetologia-medico-y-paciente.jpg"
+          alt="Tratamiento corporal"
+          class="img-left"
+        />
+        <div class="contenido contenido-left">
+          <h2>Beneficios de Nuestros Tratamientos</h2>
+
+          <h4>
+            Cada sesión está pensada para brindarte resultados visibles y
+            bienestar integral
+          </h4>
+          <ul>
+            <li>Relajación física y mental</li>
+            <li>Alivio de dolores musculares</li>
+            <li>Reafirmación y tonificación de la piel</li>
+            <li>Mejora de la circulación</li>
+            <li>Eliminación de toxinas</li>
+            <li>Control de acné e impurezas</li>
+            <li>Hidratación y nutrición profunda</li>
+            <li>Estética con bienestar</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <!--Botón de WhatsApp flotante-->
+    <a class="flotante" href="https://wa.me/+50671581462">
+      <img class="boton-wsp" src="../img/WhatsAppLogo.png" border="0" />
+    </a>
+
+    <footer>
+      <div class="footer-content">
+        <div class="footer-logo">
+          <img src="../img/LogoZadum.png" alt="Cuidado Facial" />
+        </div>
+        <div>
+          <div class="footer-links">
+            <a
+              href="https://www.instagram.com/zadum__oficial?igsh=dnh6Zm9vOGphc3Z3"
+              target="_blank"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+            <a href="https://www.facebook.com" target="_blank"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
+            <a href="https://wa.me/+50671581462" target="_blank"
+              ><i class="fab fa-whatsapp"></i
+            ></a>
+          </div>
+          <p>© 2025 Zadum. Todos los derechos reservados.</p>
+        </div>
+      </div>
+    </footer>
+    <script src="../js/index.js"></script>
+    <script src="../js/viewService.js"></script>
+  </body>
 </html>
