--- a/views/services.html
+++ b/views/services.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="keywords"
-      content="zadum, estetica, facial, belleza, cuidado personal"
+      content="zadum, estetica, facial, belleza, cuidado personal, servicios, desplegable, visual"
     />
     <meta name="author" content="Majo & Arianna" />
     <title>Servicios</title>
@@ -56,6 +56,7 @@
         belleza y bienestar. Desde cuidado facial hasta tratamientos corporales,
         nuestro equipo de expertos está aquí para ofrecerte una experiencia
         personalizada y de alta calidad.
+        Toca el texto para mas informacion
       </p>
       <div class="card-servicio">
         <img
